--- a/front/package.json
+++ b/front/package.json
@@ -9,10 +9,24 @@
   "author": "PKM",
   "license": "MIT",
   "dependencies": {
+    "antd": "^4.12.3",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
+    "immer": "^8.0.1",
+    "next": "^10.0.7",
+    "next-redux-saga": "^4.1.2",
+    "next-redux-wrapper": "^6.0.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "webpack": "^5.22.0"
   }
 }
