--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1"
   },
